# poppler-cairo-backend

./: 0001-Cairo-backend-added-to-Qt4-wrapper.patch  0001-Cairo-backend-added-to-Qt5-wrapper.patch  0002-Cairo-output-can-now-be-built-for-Qt4-without-buildi.patch  0002-Setting-default-Qt4-backend-to-Cairo.patch  0002-Setting-default-Qt5-backend-to-Cairo.patch  0003-Apply-subpixel-rendering-in-Cairo-Backend.patch  0003-Forcing-subpixel-rendering-in-Cairo-backend.patch  0003-Setting-default-Qt4-backend-to-Cairo.patch  0004-Don-t-built-qt4-and-qt5-tests-and-demos-in-CMake.patch  0004-Enabling-slight-hinting-in-Cairo-Backend.patch  0004-Forcing-subpixel-rendering-in-Cairo-backend.patch  0005-Enabling-slight-hinting-in-Cairo-Backend.patch  CMakeLists.txt  ChangeLog  NEWS  README.textile  configure.ac  make_archive  poppler-config.h.cmake
cpp/: Doxyfile
fofi/: FoFiTrueType.cc
glib/: Makefile.am  poppler-action.cc  poppler-annot.cc  poppler-attachment.cc  poppler-document.cc  poppler-document.h  poppler-layer.cc  poppler-page.cc  poppler-page.h  test-poppler-glib.cc
glib/demo/: Makefile.am  annots.c  info.cc  main.c  utils.c
msvc/: config.h
poppler/: ABWOutputDev.cc  Annot.cc  ArthurOutputDev.cc  CairoFontEngine.cc  CairoOutputDev.cc  CairoOutputDev.h  Catalog.cc  DCTStream.cc  DCTStream.h  FontInfo.cc  FontInfo.h  Form.cc  Gfx.cc  GfxFont.cc  GfxState.cc  GlobalParams.cc  GlobalParams.h  JBIG2Stream.cc  JPXStream.cc  Lexer.cc  Link.cc  Makefile.am  PDFDoc.cc  PSOutputDev.cc  SplashOutputDev.cc  Stream.cc  Stream.h  TextOutputDev.cc  poppler-config.h.in
qt/: Makefile.am  poppler-document.cc  poppler-page.cc  poppler-private.h  poppler-qt.h
qt4/src/: Doxyfile  poppler-annotation.cc  poppler-document.cc  poppler-form.cc  (+4 more)
qt5/src/: CMakeLists.txt  Doxyfile  poppler-document.cc  poppler-page.cc  poppler-private.cc  poppler-qt5.h
splash/: Splash.cc  SplashBitmap.cc  SplashScreen.cc  SplashScreen.h  SplashXPath.cc
test/: Makefile.am  pdf-inspector.cc
utils/: HtmlOutputDev.cc  Makefile.am  parseargs.cc  parseargs.h  pdftocairo.cc  pdftoppm.cc
(+1 files in other folders)
